# text

./: .gitignore  Text.hs  TextLift.hs  appveyor.yml  cabal.project  cbits.c  text.cabal
.github/workflows/: ci.yml  freebsd.yml  haskell-ci.yml  windows_and_macOS.yml
cbits/: cbits.c  find-invalid-utf8.c  is-valid-utf8.c  length.c  reverse.c  simdjson.cpp  simdjson.h  validate_utf8.cpp  validate_utf8.h
cbits/x86/: find-invalid-utf8.c  is-valid-utf8.c
include/: simdjson.h
src/Data/: Text.hs  TextLift.hs
src/Data/Text/: Array.hs  Encoding.hs  Foreign.hs  Internal.hs  Lazy.hs  Show.hs  Unsafe.hs
src/Data/Text/Internal/: Builder.hs  Fusion.hs  Private.hs  Search.hs
src/Data/Text/Internal/Encoding/: Fusion.hs  Utf8.hs
src/Data/Text/Internal/Fusion/: Common.hs  Size.hs  Types.hs
src/Data/Text/Internal/Lazy/: Fusion.hs  Search.hs
src/Data/Text/Internal/Lazy/Encoding/: Fusion.hs
src/Data/Text/Internal/Unsafe/: Char.hs
src/Data/Text/Lazy/: Encoding.hs
tests/: Tests.hs
tests/Tests/: QuickCheckUtils.hs  Regressions.hs
tests/Tests/Properties/: LowLevel.hs
