cabal-version:  >= 1.10
name:           linking-issue
build-type:     Simple
version:        0.0

library
  c-sources:    cbits/cbits.c
  hs-source-dirs: src

  exposed-modules:
    Data.Text
    Data.TextLift

  build-depends:
    base             >= 4.9 && < 5,
    template-haskell >= 2.5 && < 2.19
  default-language: Haskell2010
